# clock-cal

./: LICENSE  Notes.md  README.md  index.html  package.json  pnpm-lock.yaml
image-src/: clock-cal.xcf
src/: app.ts  calendar-disk.ts  calendar.ts  clock.ts  constants.ts  dateutil.ts  day.ts  footer.ts  helpers.ts  main.ts  month.ts  point.ts  six-point-polygon.ts  styles.css  week.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
